src/test/deca/context/valid/obj/declclass/test_create_class_super.deca
// Description:
//    Create a class A that inherits from B
//
// Resultats:
//
// 
// Historique:
//    cree le 01/01/2024

class B{

}

class A extends B {
}
