src/test/deca/context/invalid/obj/declclass/test_create_class_without_mother.deca
// Description:
//    Create a class with a mother who does not exist
//
// Resultats:
//   La classe mère n'existe pas
// 
// Historique:
//    cree le 01/01/2024

class A extends B {
}
